--- a/styles/post.css
+++ b/styles/post.css
@@ -5,6 +5,7 @@
 .post h1 {
   font-size: 2rem;
   margin: 1rem 0;
+  color: var(--font-color);
 }
 
 .post .date {
@@ -22,4 +23,5 @@
   margin: 1rem 0;
   line-height: 1.6;
   font-size: 1.1rem;
+  color: var(--font-color);
 }
