--- a/styles/index.css
+++ b/styles/index.css
@@ -22,6 +22,12 @@ body.dark {
   --font-color: #fff;
 }
 
+body.dark header .logo {
+  background-image: url('/assets/images/deividas-rimkus-header-logo.webp');
+  background-position: center;
+  background-size: contain;
+}
+
 /* THEME END */
 
 body {
@@ -54,6 +60,14 @@ img {
 a {
   color: var(--font-color);
   text-decoration: none;
+}
+
+header .logo {
+  width: 3rem;
+  height: 3rem;
+  background-image: url('/assets/images/deividas-rimkus-header-logo-dark.webp');
+  background-position: center;
+  background-size: contain;
 }
 
 header .theme-switch {
