--- a/styles/index.css
+++ b/styles/index.css
@@ -43,6 +43,25 @@ footer {
   margin: 2rem auto;
 }
 
+.scroll-to-top-btn {
+  position: fixed;
+  bottom: 2rem;
+  right: 2rem;
+  border: 3px solid var(--font-color);
+  border-radius: 50%;
+  width: 3rem;
+  height: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--font-color);
+  z-index: 5;
+}
+
+.scroll-to-top-btn:hover {
+  cursor: pointer;
+}
+
 header {
   font-size: 1.5rem;
   font-weight: 700;
